--- a/usbSerialExamples/src/main/res/values/dimens.xml
+++ b/usbSerialExamples/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
     <dimen name="ModeText">20sp</dimen>
     <dimen name="minWidth">50sp</dimen>
-    <dimen name="RadioHeight">100dp</dimen>
+    <dimen name="RadioHeight">100sp</dimen>
     <dimen name="GallonTextSize">15sp</dimen>
     <dimen name="RadioButtonTextSize">20sp</dimen>
     <dimen name="ModeButtonMinWidth">50sp</dimen>
@@ -13,11 +13,13 @@
     <dimen name="StartMarginFrag">1sp</dimen>
     <dimen name="flowMeterTxtSize">20sp</dimen>
     <dimen name="flowMenuHeaderTxtSize">30sp</dimen>
-    <dimen name="spinnerWidth">50dp</dimen>
-    <dimen name="spinnerHeight">50dp</dimen>
-    <dimen name="spinnerMarginStart">16dp</dimen>
+    <dimen name="spinnerWidth">50sp</dimen>
+    <dimen name="spinnerHeight">50sp</dimen>
+    <dimen name="spinnerMarginStart">16sp</dimen>
     <dimen name="AnrButtonTextSize">12sp</dimen>
     <dimen name="timeTextSize">16sp</dimen>
-    <dimen name="TestButtonWidth">50dp</dimen>
-    <dimen name="TestButtonHeight">50dp</dimen>
+    <dimen name="TestButtonWidth">110sp</dimen>
+    <dimen name="TestButtonHeight">60sp</dimen>
+    <dimen name="SpinnerRightMargin">100sp</dimen>
+    <dimen name="SpinnerTextSize">30sp</dimen>
 </resources>
