--- a/usbSerialExamples/src/main/res/values/styles.xml
+++ b/usbSerialExamples/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="spinner_text_style" parent="@android:style/Widget.TextView.SpinnerItem">
+        <item name="android:textSize">50sp</item>
+        <item name="android:textColor">@color/cardview_light_background</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
