--- a/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
+++ b/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
@@ -11,15 +11,19 @@
 
     <!--Time-->
 
+    <!--Time,Gallons Labels Here -->
+
+    <!-- Receive Stuff -->
+
     <RadioGroup
         android:id="@+id/main_mode"
         android:layout_width="445dp"
         android:layout_height="397dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.154"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -130,35 +134,29 @@
 
     </RadioGroup>
 
-    <!--Time,Gallons Labels Here -->
-
-    <!-- Receive Stuff -->
-
     <Spinner
         android:id="@+id/tankDropDown"
-        android:layout_width="304dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="224dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="166dp"
+        android:layout_height="112dp"
         android:paddingLeft="10pt"
         android:paddingRight="10pt"
         android:paddingBottom="10pt"
         android:spinnerMode="dropdown"
         android:textColor="@color/cardview_light_background"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/_gallonslabel"
         app:layout_constraintTop_toBottomOf="@+id/_gallonslabel" />
 
     <TextView
         android:id="@+id/RevNumber"
-        android:layout_width="159dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="@string/UiRevision"
         android:textSize="@dimen/GallonTextSize"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_mode" />
 
@@ -166,24 +164,21 @@
         android:id="@+id/timeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="20dp"
         android:paddingStart="10pt"
         android:paddingEnd="10pt"
         android:text="Time"
         android:textColor="@android:color/secondary_text_dark"
         android:textSize="@dimen/GallonTextSize"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_mode" />
+        app:layout_constraintStart_toStartOf="@+id/RevNumber"
+        app:layout_constraintTop_toBottomOf="@+id/RevNumber" />
 
     <TextView
         android:id="@+id/timeRemote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="24dp"
-        android:maxLines="2"
-        android:minLines="1"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="4dp"
         android:paddingStart="10pt"
         android:paddingTop="1dp"
         android:paddingEnd="10pt"
@@ -197,21 +192,20 @@
 
     <TextView
         android:id="@+id/SerialNumber"
-        android:layout_width="222dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="132dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:text="SN 1234567890"
         android:textSize="@dimen/GallonTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_mode" />
+        app:layout_constraintStart_toEndOf="@+id/RevNumber"
+        app:layout_constraintTop_toTopOf="@+id/RevNumber" />
 
     <TextView
         android:id="@+id/_gallonslabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginStart="288dp"
+        android:layout_marginTop="24dp"
         android:paddingLeft="10pt"
         android:text=" Tank Size Gallons"
         android:textColor="@android:color/secondary_text_dark"
@@ -221,11 +215,11 @@
 
     <TextView
         android:id="@+id/receiveText"
-        android:layout_width="1220dp"
-        android:layout_height="412dp"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_marginTop="5dp"
         android:clickable="false"
         android:enabled="true"
-        android:freezesText="true"
         android:gravity="bottom"
         android:maxLines="10"
         android:minLines="1"
@@ -234,9 +228,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tankDropDown"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="16dp" />
 
     <ImageView
         android:id="@+id/hootBug"
