--- a/usbSerialExamples/src/main/res/values/dimens.xml
+++ b/usbSerialExamples/src/main/res/values/dimens.xml
@@ -21,5 +21,8 @@
     <dimen name="TestButtonWidth">110sp</dimen>
     <dimen name="TestButtonHeight">60sp</dimen>
     <dimen name="SpinnerRightMargin">100sp</dimen>
-    <dimen name="SpinnerTextSize">30sp</dimen>
+    <dimen name="SpinnerTextSize">20sp</dimen>
+    <dimen name="ManualPopUpWidth">150sp</dimen>
+    <dimen name="ManualButtonHeight">50sp</dimen>
+    <dimen name="ManualButtonBottomMargin">8dp</dimen>
 </resources>
